# JulesKanban

./: clock.py  commons.py  displayer.py  main.py  manager.py  optimizer.py  productionline.py  pyproject.toml  pyrightconfig.json  statisticsLogger.py  task.py  worker.py
juleskanban/: clock.py  commons.py  displayer.py  main.py  manager.py  optimizer.py  productionline.py  statisticsLogger.py  task.py  worker.py
