[project]
name = "juleskanban"
version = "0.1.0"
description = ""
authors = [
    {name = "Morgan Roux",email = "roux.morgan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "pyright (>=1.1.394,<2.0.0)"
]

[tool.poetry.scripts]
start = "juleskanban.productionline:main"

[tool.poe.tasks]
lint         = "pyright --verbose"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
poethepoet = "^0.32.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


